# adamant

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  build-x86.sh  build.rs  create_disk.sh  limine.cfg  linker.ld  run_qemu.sh  run_update.sh
.cargo/: config
src/: header.rs  main.rs
src/io/: mod.rs  serial.rs
src/x86/: mod.rs  portio.rs
src/x86/x86_64/: gdt.rs  helper.S  loader.rs  mod.rs
targets/: adamant-x86.json  yeye-x86.json
